Fix Z-index of slides in Slick Slider for Partners/Contributors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -479,7 +479,7 @@ section {
 .slick-slide .token {
   max-width: 117px;
 }
-.slick-slide[tab-index="-1"] {
+.slick-slide:not(.slick-current) {
   pointer-events: none;
 }
 
